--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -16,6 +16,11 @@
     </h1>
     Also read the rules to see what you can ban someone for.
     <h3>
+      !!warn [user] (reason)
+    </h3>
+    COMING SOON: Warns a user. The user will have to read the warning before 
+    being allowed to chat again.
+    <h3>
       !!ban [user] (reason)
     </h3>
     Bans a user. If a reason is not provided, the user will see 
