--- a/public/app/index.html
+++ b/public/app/index.html
@@ -75,17 +75,17 @@
       </div>
       <div id="online"></div>
       <div id="settingsside" style="display: none">
-        <input type="button" class="button2" value="Account Settings" onclick="settingsMenu(true, 'settings_account');" style="width: 170px;"><br>
+        <input type="button" class="button2" value="Account Settings" onclick="settingsMenu(true, 'settings_account');" style="width: 240px;"><br>
 
-        <input type="button" class="button2" value="Profile Settings" onclick="settingsMenu(true, 'settings_profile');" style="width: 170px;"><br>
+        <input type="button" class="button2" value="Profile Settings" onclick="settingsMenu(true, 'settings_profile');" style="width: 240px;"><br>
 
-        <input type="button" class="button2" value="Blocked Users" onclick="settingsMenu(true, 'settings_blocks');" style="width: 170px;"><br>
+        <input type="button" class="button2" value="Blocked Users" onclick="settingsMenu(true, 'settings_blocks');" style="width: 240px;"><br>
       </div>
       <div id="discover" style="display: none">
         Coming soon... most likely sometime around v2.9.0
       </div>
       <div id="directmsgs" style="display: none">
-        <textarea id="dms-textbox" class="text2" cols="1" placeholder="Type a username..."></textarea>
+        <textarea id="dms-textbox" class="text2" style="width: 234px;" cols="1" placeholder="Type a username..."></textarea>
         <br />
         <b>Conversations</b><br />
         <div id="dm-list"></div>
@@ -101,7 +101,7 @@
         More customization coming soon...
         <br>
         <h3>
-          PROFILE PICTURE
+          PROFILE PICTURE (.pnng only - cool people don't use jpegs)
         </h3>
         <div>
           CURRENT PICTURE:<br>
@@ -167,6 +167,7 @@
     <div id="chat__main" class="messages">
       <div class="message sysmsg">
         Welcome to Muenster!<br>
+        <b>ANOUNCEMENT (3/29/23):</b> There will be new Community Guidelines that will go into effect on April 2nd. <a href="/view-article/community-guidelines">Please read them here.</a><br>
         <a class="fuckingbox" href="/articles/index.html" target="_blank">
           <img 
             src="https://cdn.glitch.global/3758b37a-5fff-4595-b604-762ee951816d/news.png?v=1679410043532"
@@ -184,6 +185,12 @@
             src="https://cdn.glitch.global/3758b37a-5fff-4595-b604-762ee951816d/markdown.png?v=1679410740982"
           />
           Markdown
+        </a>
+        <a class="fuckingbox" href="https://mnstr.glitch.me/?gh" target="_blank">
+          <img 
+            src="https://cdn.glitch.global/3758b37a-5fff-4595-b604-762ee951816d/github.png"
+          />
+          G﻿і﻿t﻿h﻿u﻿b
         </a>
         <a class="fuckingbox" href="/admin/index.html" target="_blank">
           <img 
