--- a/public/appbeta/index.html
+++ b/public/appbeta/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://cdn.glitch.global/3758b37a-5fff-4595-b604-762ee951816d/muenster.png?v=1676838646502">
 
-  <title>Muenster</title>
+  <title>Muenster [BETA]</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
   <link rel="preload" as="script" href="/assets/app.js">
@@ -184,6 +184,12 @@
             src="https://cdn.glitch.global/3758b37a-5fff-4595-b604-762ee951816d/markdown.png?v=1679410740982"
           />
           Markdown
+        </a>
+        <a class="fuckingbox" href="https://mnstr.glitch.me/?gh" target="_blank">
+          <img 
+            src="https://cdn.glitch.global/3758b37a-5fff-4595-b604-762ee951816d/github.png"
+          />
+          G﻿і﻿t﻿h﻿u﻿b
         </a>
         <a class="fuckingbox" href="/admin/index.html" target="_blank">
           <img 
