--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,9 @@
       </div>
     </div>
     </div>
-    <a href="https://mnstr.glitch.me/?gh">RN G﻿і﻿t﻿h﻿u﻿b</a> 
+    <a href="https://mnstr.glitch.me/?gh">G﻿і﻿t﻿h﻿u﻿b</a> 
     | <a href="https://mnstr.glitch.me/?ws">RN Website</a>
-    | <a href="/rules/index.html">Community Guidelines</a>
+    | <a href="/view-article/community-guidelines">Community Guidelines</a>
     | <a href="/articles/index.html">Articles &amp; News</a>
     | <a href="https://discord.gg/Sb8NzVbqX8">D﻿і﻿ѕ﻿с﻿о﻿r﻿d</a>
     | <a href="/update/index.html">Update Logs</a>
