--- a/public/rules/index.html
+++ b/public/rules/index.html
@@ -15,11 +15,13 @@
       Community Guidelines <a style="font-size: 12px;" href="/index.html">Back to Home</a>
     </h1>
     This is a list of guidelines you should follow if you like keeping your account.<br>
-    Just to clarify, these rules apply to ALL content sent by you, including images.
+    Just to clarify, these rules apply to ALL content sent by you, including images.<br>
+    <b>NOTE: This version of the community guidelines will be replaced with <a href="/view-article/community-guidelines">this new one</a> starting April 2nd.</b>
     <h3>
       Be kind and welcoming
     </h3>
-    Discrimination, bullying, harassment, etc. will not be tolerated here.
+    Discrimination, bullying, harassment, etc. will not be tolerated here. Also, no depictions of Hitler, Stalin, etc. unless in
+    an educational/negative way.
     <h3>
       No spamming or malware
     </h3>
