--- a/public/update/index.html
+++ b/public/update/index.html
@@ -15,9 +15,22 @@
       Update Logs <a style="font-size: 12px;" href="/index.html">Back to Home</a>
     </h1>
     <h3>
+      v2.april.fools
+    </h3>
+    <pre>+ Added grenades.
++ Did your mom.
+= Some very fun filter changes...</pre>
+    <h3>
+      v2.8.3
+    </h3>
+    <pre>+ Added the new Community Guidelines article.
+= Backend profile picture changes.
+= Filter revamp - there should be less false positives and
+more actual positives.</pre>
+    <h3>
       v2.8.2
     </h3>
-    <pre>= Filter changes.
+    <pre>= Filter changes.</pre>
     <h3>
       v2.8.1
     </h3>
